# QXdg

./: .gitignore  CMakeLists.txt  Doxyfile.in  QXdg.pro
QXdgTest/: CMakeLists.txt  QXdgTest.pro  tst_qxdgdesktopentrytest.cpp  tst_qxdgstandardpathtest.cpp
qxdg/: CMakeLists.txt  qxdg.pro  qxdg_global.h  qxdgdesktopentry.cpp  qxdgdesktopentry.h  qxdgstandardpath.cpp  qxdgstandardpath.h
utils/: CMakeLists.txt  main.cpp
